agregado los elementos html

--- a/clase5/views/auth.html
+++ b/clase5/views/auth.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html lang = "en">
+
+<cabeza>
+  <meta charset = "UTF-8">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+  <link rel = "stylesheet" href = "css/uikit.min.css">
+  <script src = "js/uikit.min.js"> </script>
+  <title> Índice </title>
 </head>
-<body>
-    
+
+<cuerpo>
+  <div class = "uk-cover-container uk-height-medium">
+    <img src = "img/header.svg" alt = "" uk-cover>
+    <nav class = "uk-navbar-container" uk-navbar>
+      <div class = "uk-navbar-left">
+        <a class="uk-navbar-item uk-logo" href="home"> <img src = "img/logo.svg"> </a>
+        <ul class = "uk-navbar-nav">
+          <li class = "uk-active"> <a href="/"> Inicio </a> </li>
+          <li> <a href="about"> Acerca de </a> </li>
+          <li> <a href="blog"> Blog </a> </li>
+          <li> <a href="contact"> Contacto </a> </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
 </body>
+
 </html>
